Add footer to the edit Userprofile  page

--- a/UI/editUserProfile.html
+++ b/UI/editUserProfile.html
@@ -63,5 +63,12 @@
 		</div>
 	</form>	
 
+	<footer>
+		<div class="container">
+			<p>MyDiary: An Andela BootCamp Product. Copyright &copy; 2018</p>
+		</div>
+	</footer>
+
+
 </body>
 </html>
