Add footer to the userProfile page

--- a/UI/userProfile.html
+++ b/UI/userProfile.html
@@ -63,6 +63,13 @@
 
 	</section>
 
+	<footer>
+		<div class="container">
+			<p>MyDiary: An Andela BootCamp Product. Copyright &copy; 2018</p>
+		</div>
+	</footer>
+
+
 
 </body>
 </html>
