--- a/UI/signIn.html
+++ b/UI/signIn.html
@@ -59,5 +59,12 @@
 		</div>
 	</section>
 
+	<footer>
+		<div class="container">
+			<p>MyDiary: An Andela BootCamp Product. Copyright &copy; 2018</p>
+		</div>
+	</footer>
+
+
 </body>
 </html>
