Update form label toConfirm Password

--- a/UI/editUserProfile.html
+++ b/UI/editUserProfile.html
@@ -53,7 +53,7 @@
 			</div>
 
 			<div class="form-element">
-				<label for="password">Password</label>
+				<label for="password"> Confirm Password</label>
 				<input type="password" name="password" id="password" value="xxxxxxx">
 			</div>
 
