Change form elements to div

--- a/UI/viewEntry.html
+++ b/UI/viewEntry.html
@@ -38,18 +38,18 @@
 
 			<div class="form-element">
 				<label for="date">Date</label>
-				<input type="date" name="date" id="date" value="07/02/2018">
+				<div>25/06/18</div>
 			</div>
 			
 			<div class="form-element">
 				<label for="title">Entry Title</label>
-				<input type="text" name="title" id="title" placeholder="Title" value="Lessons learned in 2018 so far">
+				<div>Lessons learned in 2018 so far</div>
 			</div>
 			
 			<div class="form-element">
 				<label for="entry">Your Entry</label>
-				<textarea name="entry" id="entry" placeholder="Enter your entry here">Mehn! 2018 has been kind to me. I have enjoyed God's goodness. But I have learned a lot as well. For one, I have learnt not to have a fixed mindset. That is limit my understanding of myself. Indeed, there is nothing I cannot learn how to do well with time and practise.
-				</textarea>
+				<div name="entry" id="entry" placeholder="Enter your entry here">Mehn! 2018 has been kind to me. I have enjoyed God's goodness. But I have learned a lot as well. For one, I have learnt not to have a fixed mindset. That is limit my understanding of myself. Indeed, there is nothing I cannot learn how to do well with time and practise.
+				</div>
 			</div>
 
 			<div class="form-element">
