Update API endpoints to connect to database

--- a/UI/signIn.html
+++ b/UI/signIn.html
@@ -34,7 +34,7 @@
 		</div>
 	</section>
 
-	<form class="signup" action="#" method="POST">
+	<form class="signup" action="" method="POST">
 		<div class="form-container">
 			<div class="form-element">
 				<label for="email">Email</label>
