--- a/UI/signUp.html
+++ b/UI/signUp.html
@@ -34,16 +34,16 @@
 		</div>
 	</section>
 
-	<form class="signup" action="#" method="POST">
+	<form class="signup" action="/signup" method="POST">
 		<div class="form-container">
-			<div class="form-element">
-				<label for="email">Email</label>
-				<input type="email" name="email" id="email" placeholder="example@email.com">
-			</div>
-			
 			<div class="form-element">
 				<label for="username">Username</label>
 				<input type="text" name="username" id="username" placeholder="Johnny">
+			</div>
+
+			<div class="form-element">
+				<label for="email">Email</label>
+				<input type="email" name="email" id="email" placeholder="example@email.com">
 			</div>
 			
 			<div class="form-element">
